--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+getopts = "0.2"
+reqwest = "0.10"
+rust-ini = "0.16"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+simple-error = "0.2"
+uuid = { version = "0.8", features = ["v4"] }
+
