--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "icinga2ctl"
-version = "1.0.0-20201209"
+version = "0.7.0-20201210"
 authors = ["Andreas Maus <maus@badphish.ypbind.de>"]
 edition = "2018"
 
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 ansi_term = "0.12"
 base64 = "0.13"
+chrono = "0.4"
 clap = "2.33"
 getopts = "0.2"
 http = "0.2"
@@ -19,3 +20,5 @@ serde_json = "1.0"
 simple-error = "0.2"
 url = "2.2"
 uuid = { version = "0.8", features = ["v4"] }
+users = "0.11"
+
